--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,6 @@
     ],
     "require": {
         "php" : ">=5.4.0",
-        "techdivision/socket": "*"
+        "techdivision/socket": "dev-master"
     }
 }
