--- a/build.linux.properties
+++ b/build.linux.properties
@@ -14,6 +14,7 @@ git.bin = ${bin.dir}/git
 curl.bin = ${bin.dir}/curl
 bin.extract = ${bin.dir}/tar
 bin.extract.args = xzf
+pear.bin.dir = ${bin.dir}
 
 # ---- Enviromental Settings for Mac --------------------------------------------
 # Directories
