--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "php" : ">=5.4.0",
         "techdivision/socket": "dev-master",
-        "monolog/monolog": "*"
+        "monolog/monolog": "*",
+        "herrera-io/annotations": "dev-master"
     },
     "autoload": {
         "psr-0": {"TechDivision": "src/"}
