Add streaming socket functionality

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "herrera-io/annotations": "1.0.*"
     },
     "require-dev": {
-        "techdivision/socket": "dev-master"
+        "techdivision/socket": "dev-master",
+        "techdivision/stream": "dev-master"
     },
     "autoload": {
         "psr-0": {"TechDivision": "src/"}
