--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: php
-
-php:
-  - 5.4
-  - 5.5
-
-matrix:
-  allow_failures:
-    - php: 5.5
+  
+before_install:
+- sudo echo "deb http://deb.appserver.io/ wheezy main" >> /etc/apt/sources.list
+- sudo wget http://deb.appserver.io/appserver.gpg
+- sudo cat appserver.gpg | apt-key add - 
+- sudo aptitude update
+- sudo aptitude install appserver
  
 script:
  - ant run-tests
