Refactoring travis-ci build

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ php:
   
 before_install:
   - pecl install pthreads-beta
-  - echo "extension=pthreads.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   
 script:
-  - ant run-tests-on-travis
+  - ant build
 
 notifications:
   email: info@appserver.io
