--- a/build.xml
+++ b/build.xml
@@ -135,7 +135,7 @@
     <!-- ==================================================================== -->
     <!-- Runs the PHPUnit tests on Travis-CI and generates a report           -->
     <!-- ==================================================================== -->
-    <target name="run-tests-on-travis" depends="copy-tests" description="Runs the PHPUnit tests on Travis-CI and generates a report.">
+    <target name="run-tests" depends="copy-tests" description="Runs the PHPUnit tests on Travis-CI and generates a report.">
         <exec executable="phpunit" dir="${php-target.dir}/${unique.name}/src">
         	<arg line="--configuration phpunit.xml.dist" />
         </exec>
@@ -144,7 +144,7 @@
     <!-- ==================================================================== -->
     <!-- Runs the PHPUnit tests and generates a report                        -->
     <!-- ==================================================================== -->
-    <target name="run-tests" depends="copy-tests" description="Runs the PHPUnit tests and generates a report.">
+    <target name="run-tests-in-runtime" depends="copy-tests" description="Runs the PHPUnit tests and generates a report.">
         <exec executable="${instance.base.dir}/bin/php" dir="${php-target.dir}/${unique.name}/src">
         	<arg line="-d zend_extension=xdebug.so ${instance.base.dir}/bin/phpunit --configuration phpunit.xml.dist" />
         </exec>
