Move Vhost class to ApplicationServer package, refactoring PHPUnit tests

--- a/build.xml
+++ b/build.xml
@@ -136,7 +136,7 @@
     <!-- Runs the PHPUnit tests on Travis-CI and generates a report           -->
     <!-- ==================================================================== -->
     <target name="run-tests" depends="copy-tests" description="Runs the PHPUnit tests on Travis-CI and generates a report.">
-        <exec executable="phpunit" dir="${php-target.dir}/${unique.name}/src">
+        <exec executable="phpunit" dir="${php-target.dir}/${unique.name}/src" failonerror="true">
         	<arg line="--configuration phpunit.xml.dist" />
         </exec>
     </target>
@@ -145,8 +145,8 @@
     <!-- Runs the PHPUnit tests and generates a report                        -->
     <!-- ==================================================================== -->
     <target name="run-tests-in-runtime" depends="copy-tests" description="Runs the PHPUnit tests and generates a report.">
-        <exec executable="${instance.base.dir}/bin/php" dir="${php-target.dir}/${unique.name}/src">
-        	<arg line="-d zend_extension=xdebug.so ${instance.base.dir}/bin/phpunit --configuration phpunit.xml.dist" />
+        <exec executable="${instance.base.dir}/bin/php" dir="${php-target.dir}/${unique.name}/src" failonerror="true">
+        	<arg line="-d zend_extension=xdebug.so ${instance.base.dir}/app/code/vendor/bin/phpunit --configuration phpunit.xml.dist" />
         </exec>
     </target>
 
