--- a/doc/source/_themes/bootstrap/theme.conf
+++ b/doc/source/_themes/bootstrap/theme.conf
@@ -1,8 +1,8 @@
 # Twitter Bootstrap Theme
 [theme]
 inherit = basic
-stylesheet = basic.css
-pygments_style = tango
+# stylesheet = basic.css
+# pygments_style = tango
 
 # Configurable options.
 [options]
@@ -20,7 +20,7 @@ navbar_links =
 navbar_sidebarrel = true
 
 # Render the current pages TOC in the navbar. (Default: true)
-navbar_pagenav = true
+navbar_pagenav = trie
 
 # Global TOC depth for "site" navbar tab. (Default: 1)
 # Switching to -1 shows all levels.
@@ -46,15 +46,3 @@ navbar_fixed_top = true
 # Location of link to source.
 # Options are "nav" (default), "footer" or anything else to exclude.
 source_link_position = nav
-
-# Bootswatch (http://bootswatch.com/) theme.
-#
-# Options are nothing with "" (default) or the name of a valid theme such as
-# "amelia" or "cosmo".
-#
-# Note that this is served off CDN, so won't be available offline.
-bootswatch_theme = ""
-
-# Switch Bootstrap version?
-# Values: "3" (default) or "2"
-bootstrap_version = 3
