--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "herrera-io/annotations": "1.0.*",
         "techdivision/socket": "dev-0.5.8-beta",
         "techdivision/stream": "dev-0.5.8-beta",
+        "techdivision/php-by-contract": "dev-master",
         "rhumsaa/uuid": "~2.4"
     },
     "autoload": {
