refactored to appserver.io coding standards

--- a/build.xml
+++ b/build.xml
@@ -67,8 +67,9 @@
     <!-- Runs the code sniffer and generates a report                         -->
     <!-- ==================================================================== -->
     <target name="phpcs" description="Runs the code sniffer and generates a report.">
-        <exec executable="phpcs">
-            <arg line="--extensions=php,phtml --standard=Zend --report=checkstyle --report-file=${php-target.dir}/reports/checkstyle.xml ${php-src.dir}"/>
+        <exec executable="phpcs" failonerror="true">
+            <!-- call phpcs without report-file to get error message on build console -->
+            <arg line="-n --extensions=php --standard=phpcs.xml ."/>
         </exec>
     </target>
 	
@@ -152,13 +153,15 @@
     <!-- Runs the PHPUnit tests and generates the code metrics				  -->
     <!-- ==================================================================== -->
     <target name="build" description="Runs the PHPUnit tests and generates the code metrics.">
+        <antcall target="phpcs"/>
         <antcall target="run-tests"/>
+        <!--
     	<antcall target="apidoc"/>
-    	<antcall target="phpcs"/>
     	<antcall target="phpcpd"/>
     	<antcall target="phploc"/>
     	<antcall target="pdepend"/>
     	<antcall target="phpmd"/>
+    	-->
     </target>
 
     <!-- ==================================================================== -->
