corrected code style, and reverted travis config to just install phpcs

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ php:
   
 before_install:
   - pecl install pthreads-beta
-  - pear channel-discover pear.phpqatools.org
-  - pear install -f phpqatools/phpqatools
+  - pyrus install pear/PHP_CodeSniffer
   - phpenv rehash
   
 script:
