Bugfixing PHPUnit tests

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "herrera-io/annotations": "1.0.*",
         "techdivision/socket": "dev-master",
         "techdivision/stream": "dev-master",
-        "techdivision/storage": "dev-master"
-        "rhumsaa/uuid": "~2.4",
+        "techdivision/storage": "dev-master",
+        "rhumsaa/uuid": "~2.4"
     },
     "autoload": {
         "psr-0": {
