added scrutinizer code coverage hook

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,14 @@ php:
 
 before_install:
   - pecl install pthreads-beta
+  - pecl install xdebug
   - pyrus install pear/PHP_CodeSniffer
   - phpenv rehash
+  - wget https://scrutinizer-ci.com/ocular.phar
 
 script:
   - ant build
+  - php ocular.phar code-coverage:upload --format=php-clover $TRAVIS_BUILD_DIR/target/reports/unit/clover.xml
 
 notifications:
   email: info@appserver.io
