--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "psr/log": "*",
         "rhumsaa/uuid": "~2.4",
         "monolog/monolog": "1.10.*",
+        "herrera-io/annotations": "1.0.*",
         "techdivision/context": "0.5.*",
         "techdivision/storage": "0.5.*",
         "techdivision/configuration": "0.1.*",
